--- a/PagingListViewProject/gradle/wrapper/gradle-wrapper.properties
+++ b/PagingListViewProject/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,6 @@
-#
-#Sun Aug 25 15:23:04 ART 2013
+#Wed Jan 01 18:29:04 ART 2014
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://services.gradle.org/distributions/gradle-1.7-bin.zip
+distributionUrl=http\://services.gradle.org/distributions/gradle-1.9-all.zip
